third_party/move/move-compiler-v2/tests/more-v1/expansion/friend_decl_aliased_struct.exp

Diagnostics:
error: unbound module
  ┌─ tests/more-v1/expansion/friend_decl_aliased_struct.move:8:12
  │
8 │     friend A;
  │            ^ Unbound module alias 'A'
